2.Add static method to one class, try to call it and investigate output.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "demo",
   "author": "",
   "license": "ISC",
+  "type":"module",
   "dependencies": {},
   "devDependencies": {},
   "scripts": {}
